--- a/homework.html
+++ b/homework.html
@@ -11,13 +11,13 @@
    <title>Super Slick Company</title>
   </head>
   <body>
-    <div class = "skip"><a href="#main">Skip to Main Content</a></div>
+    <a class = "skip" href="#skip">Skip to Main Content</a>
     <!-- originally <a class = "skip">Skip to Main Content</a> -->
     <header>
       <img src="images/logo.png" alt="" id = "logo">
       <nav>
         <ul class="nav_links">
-          <li class="nav_item"><a href="#main">About</a></li>
+          <li class="nav_item"><a href="#skip">About</a></li>
           <li class="nav_item"><a href="#pricing">Prices</a></li>
           <li class="nav_item"><a href="#gallery">Gallery</a></li>
         </ul>
